--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,5 @@
 Flask==2.3.2
-pymongo==4.5.0
+pymongo==4.3.3
 bcrypt==4.0.1
-flask-cors==4.0.0
-gunicorn
-flask_pymongo
-
+python-dotenv==1.0.0
+flask-cors==3.0.10
