--- a/.env.txt
+++ b/.env.txt
@@ -1,1 +1,2 @@
-MONGO_URI=mongodb+srv://lame:lame@cluster0.kf45a.mongodb.net/test?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://lame:testcase@cluster0.xxxxx.mongodb.net/GLAMORA?retryWrites=true&w=majority
+SECRET_KEY=your-secure-random-key-here
