--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,5 @@ pymongo==4.3.3
 bcrypt==4.0.1
 python-dotenv==1.0.0
 flask-cors==3.0.10
+gunicorn==20.1.0
+dnspython==2.3.0  # Needed for MongoDB SRV connections
